--- a/templates/view.html
+++ b/templates/view.html
@@ -7,7 +7,24 @@
         let drink_info = {{drink_info|tojson}}
         let ingredient_tool_data = {{ingredient_tool_data|tojson}}
     </script>
-    <div id="heading"> {{drink_info.type}} Drink Choices </div>
-    <div id="update"></div>
+    <div class="row">
+        <div class="col-12">
+            <div id="selection"> {{drink_info.type}} Selection: </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-3">
+            <div id="drink_name"> {{drink_info.name}}</div>
+        </div>
+        <div class="col-3">
+            <img src="{{drink_info.image}}" alt="{{drink_info.name}}" width="150" height="100">
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-3"></div>
+        <div class="col-3">
+            <div id="update"></div>
+        </div>
+    </div>
 
 {% endblock %}
