Rebecca - added bootstrap

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -45,13 +45,20 @@
 </nav>
     <div class="container">   
         {% block content %}
-          <div id="welcome"> Welcome to Baby Barista! </div>
-          <div id="welcome-explanation"> Please navigate to your beverage category of choice to kickstart your drink making skills! </div>
+          <div class="row">
+            <div class="col-12">
+              <div id="welcome"> Welcome to Baby Barista! </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-12">
+              <div id="welcome-explanation"> Please navigate to your beverage category of choice to kickstart your drink making skills! </div>
+            </div>
+          </div>
         {% endblock %}
     </div>
   </body>
 </html>
-
 
 
 
