Rebecca - added baseline UI elements

--- a/templates/learn.html
+++ b/templates/learn.html
@@ -14,7 +14,7 @@
     </div>
     <div class="row">
         <div class="col-12">
-            Ingredients:
+            Ingredient and Tool Shelf:
             <div id="ingredients-shelf">
                 {% for ingred in  drink_info.ingredients %}
                     {{ingred}}<br>
@@ -24,7 +24,7 @@
     </div>
     <div class="row">
         <div class="col-12">
-            Tools:
+            <br>
             <div id="tools-shelf">
                 {% for tool in  drink_info.tools %}
                     {{tool}}<br>
