--- a/templates/learn.html
+++ b/templates/learn.html
@@ -18,7 +18,7 @@
             Ingredient and Tool Shelf:
             <div id="ingredients-shelf">
                 {% for ingred in  drink_info.ingredients %}
-                    <input type="button" class="ingredient_button" value="{{ingred}}"></input>
+                    <input type="button" class="ingredient_button" value="{{ingred}}"></input><br>
                 {% endfor %}
             </div>
         </div>
@@ -29,7 +29,7 @@
             <br>
             <div id="tools-shelf">
                 {% for tool in  drink_info.tools %}
-                    <input type="button" class="ingredient_button" value="{{tool}}"></input>
+                    <input type="button" class="ingredient_button" value="{{tool}}"></input><br>
                 {% endfor %}
             </div>
         </div>
