--- a/templates/learn.html
+++ b/templates/learn.html
@@ -14,35 +14,37 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-12">
+        <div class="col-4">
             Ingredient and Tool Shelf:
             <div id="ingredients-shelf">
                 {% for ingred in  drink_info.ingredients %}
-                    <input type="button" class="ingredient_button" value="{{ingred}}"></input><br>
+                    <input type="button" class="ingredient_button" value="{{ingred}}"></input>
                 {% endfor %}
             </div>
         </div>
+        <div class="col-4" id="step_instructions"></div>
+        <div class="col-4">
+            <button id="learn_next_step_button">
+                Next Step 
+            </button>
+           </div>
     </div>
     
     <div class="row">
-        <div class="col-12">
-            <br>
+        <div class="col-4">
             <div id="tools-shelf">
                 {% for tool in  drink_info.tools %}
-                    <input type="button" class="ingredient_button" value="{{tool}}"></input><br>
+                    <input type="button" class="ingredient_button" value="{{tool}}"></input>
                 {% endfor %}
             </div>
         </div>
+        <div class="col-8">
+            <div id="cup_image">
+                <img src="https://media.istockphoto.com/photos/blue-mug-picture-id1176776065?s=612x612" alt="cup" width="450" height="500">
+            </div>
+        </div>
     </div>
-    <div class="row">
-       <div class="col-6" id="step_instructions">
-       </div>	
-       <div class="col-6">
-		<button id="learn_next_step_button">
-			Next Step 
-		</button>
-       </div>
-    </div>
+   
 
 {% endblock %}
 
