moved num_correct

--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -6,6 +6,7 @@
     <script>
         let drink_info = {{drink_info|tojson}}
         let ingredient_tool_data = {{ingredient_tool_data|tojson}}
+        let num_correct = 0
     </script>
     <div class="row">
         <div class="col-12">
