designed more UI

--- a/templates/front.html
+++ b/templates/front.html
@@ -7,13 +7,17 @@
         let drink_info = {{drink_info|tojson}}
         let ingredient_tool_data = {{ingredient_tool_data|tojson}}
     </script>
-    <div class="row">
-        <div class="col-12">
-            <div id="drink_name"> {{drink_info.name}}: </div>
+   <div class="row">
+        <div class="col-2">
+            <div id="drink_name"> {{drink_info.name}}:</div>
+        </div>
+        <div class="col-3">
+            <img src="{{drink_info.image}}" alt="{{drink_info.name}}" width="150" height="100">
         </div>
     </div>
+
     <div class="row">
-        <div class="col-12">
+        <div class="col-6">
             Tools:
             <div id="tools-shelf">
                 {% for tool in  drink_info.tools %}
@@ -21,9 +25,7 @@
                 {% endfor %}
             </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-12">
+        <div class="col-6">
             Ingredients:
             <div id="ingredients-shelf">
                 {% for ingred in  drink_info.ingredients %}
@@ -33,6 +35,7 @@
         </div>
     </div>
     
+    
     <div class="row">
         <div class="col-12">
             <input type="button" class="make" value="Click to begin!"></input>
@@ -40,3 +43,4 @@
     </div>
 
 {% endblock %}
+
