--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -15,7 +15,7 @@
     </div>
     
     <div class="row">
-        <div class="col-4">
+        <div class="col-3">
             Ingredient and Tool Shelf:
             <div id="ingredients-shelf">
                 {% for ingred in  drink_info.ingredients %}
@@ -23,10 +23,9 @@
                 {% endfor %}
             </div>
         </div>
-        <div class="col-4" id="chosen_step"></div>
-        <div class="col-4" id="current_score">
-                
-           </div>
+        <div class="col-3" id="chosen_step"></div>
+        <div class="col-3" id="current_score"></div>
+        <div class="col-3" id="exit"></div>
     </div>
     
     <div class="row">
