--- a/templates/learn.html
+++ b/templates/learn.html
@@ -2,11 +2,11 @@
 
 {% block content %}
     <script type="text/javascript" src="{{ url_for('static', filename = 'learn.js') }}"></script>
-
+    
     <script>
         let drink_info = {{drink_info|tojson}}
         let ingredient_tool_data = {{ingredient_tool_data|tojson}}
-
+        let step = {{step|tojson}}
     </script>
     <div class="row">
         <div class="col-12">
@@ -14,49 +14,39 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-4">
-            Ingredient and Tool Shelf:
-            <div id="ingredients-shelf">
-                {% for ingred in  drink_info.ingredients %}
-                    <input type="button" class="ingredient_button" value="{{ingred}}"></input>
-                {% endfor %}
-            </div>
+        <div class="col-6">
+            <div id="shelf_label"> Ingredient and Tool Shelf: </div>
         </div>
-        <div class="col-4" id="step_instructions"></div>
-        <div class="col-4">
-            <button id="learn_next_step_button">
-                Next Step
-            </button>
-           </div>
+        <div class="col-6">
+            <div id="step_label"> Step: </div>
+        </div>
     </div>
-
     <div class="row">
-        <div class="col-4">
-            <div id="tools-shelf">
-                {% for tool in  drink_info.tools %}
-                    <input type="button" class="ingredient_button" value="{{tool}}"></input>
+        <div class="col-6">
+            <div id="drink_ingredients"> 
+                {% for ingred in  drink_info.ingredients %}
+                    <div class="ingredient_label" >{{ingred}}</div>
                 {% endfor %}
             </div>
         </div>
-        <div class="col-8">
-            <div id="cup_image">
-                <img src="https://media.istockphoto.com/photos/blue-mug-picture-id1176776065?s=612x612" alt="cup" width="450" height="500">
+        <div class="col-6">
+            <div class="row">
+                <div class="col-12">
+                    <div id="cup">cup</div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-6">
+            <div id="drink_tools">
+                {% for tool in  drink_info.tools %}
+                    <input type="button" class="tool_button" value="{{tool}}"></input>
+                {% endfor %}
             </div>
         </div>
     </div>
 
-
-<div id="shelf">
-
-
-          {% for num,ingretool in ingredient_tool_data.items() %}
-          <div class="row">
-            <div class="col-12">
-              Behold the {{ingretool.name}}
-               <img src="{{ingretool.image}}" alt="Picture of {{ingretool.name}}" width="50" height="50">
-            </div>
-          </div>
-          {% endfor %}
-
-</div>
 {% endblock %}
+
+
