added animations of drinks to each quiz/learn page

--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -8,6 +8,7 @@
         let ingredient_tool_data = {{ingredient_tool_data|tojson}}
         let step = {{step|tojson}}
         let score = {{score|tojson}}
+        let ingredient_colors = {{ingredient_colors|tojson}}
     </script>
     <div class="row">
         <div class="col-12">
@@ -34,7 +35,15 @@
         <div class="col-6">
             <div class="row">
                 <div class="col-12">
-                    <div id="cup">cup</div>
+                    <div class = "cup-holder">
+                        <div class = "cup-container" id = "cup">
+                            <div class = "cup"> 
+                                <div class = "drink-outline">
+                                    
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
