--- a/templates/learn.html
+++ b/templates/learn.html
@@ -7,6 +7,7 @@
         let drink_info = {{drink_info|tojson}}
         let ingredient_tool_data = {{ingredient_tool_data|tojson}}
         let step = {{step|tojson}}
+        let ingredient_colors = {{ingredient_colors|tojson}}
     </script>
     <div class="row">
         <div class="col-12">
@@ -32,7 +33,15 @@
         <div class="col-6">
             <div class="row">
                 <div class="col-12">
-                    <div id="cup">cup</div>
+                    <div class = "cup-holder">
+                        <div class = "cup-container" id = "cup">
+                            <div class = "cup"> 
+                                <div class = "drink-outline">
+                                    
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
