--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -63,9 +63,13 @@
     <div class="row">
         <div class="col-6">
             <div id="drink_tools">
-                {% for tool in  drink_info.tools %}
-                    <input type="button" class="tool_button" value="{{tool}}"></input>
-                {% endfor %}
+              {% for tool in  drink_info.tools %}
+               {% for num,ingretool in ingredient_tool_data.items() %}
+                {% if ingretool['name'] == tool %}
+                  <input type="image" src="{{ingretool.image}}" name="submit" alt="Picture of {{ingretool.name}}" width="80" height="50" class="tool_button" value="{{tool}}"/>
+                {% endif %}
+              {% endfor %}
+             {% endfor %}
             </div>
         </div>
     </div>
