--- a/templates/layout.html
+++ b/templates/layout.html
@@ -60,17 +60,17 @@
           </div>
           <div class="row">
             <div class="col-4">
-              <a href="/front/1">
+              <a href="/view/1">
                 <img src="https://media.istockphoto.com/photos/cappuccino-picture-id173245886?s=612x612" alt="cappuccino" id="menu-coffee" height="150" length="150">
               </a>
             </div>
             <div class="col-4">
-              <a href="/front/2">
+              <a href="/view/2">
                 <img src="https://media.istockphoto.com/photos/matcha-latte-green-milk-foam-cup-on-wood-table-at-cafe-trendy-powered-picture-id1325991061?s=612x612" alt="matcha latte" id="menu-tea" height="150" length="150">
              </a>
           </div>
           <div class="col-4">
-            <a href="/front/3">
+            <a href="/view/3">
               <img src="https://media.istockphoto.com/photos/homemade-warm-hot-chocolate-picture-id1320380734?s=612x612" alt="hot chocolate" id="menu-other" height="150" length="150">
            </a>
         </div>
