fixed spelling error

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -52,7 +52,7 @@
           </div>
           <div class="row">
             <div class="col-12">
-              <div id="welcome-explanation"> Learn to basics of brewing coffee, tea, and other beverages </div>
+              <div id="welcome-explanation"> Learn the basics of brewing coffee, tea, and other beverages </div>
 
 
             </div>
