--- a/templates/layout.html
+++ b/templates/layout.html
@@ -21,7 +21,7 @@
 
     <title>Baby Barista</title>
   </head>
-  <body style="background-color: #915c4c">
+  <body style="background-color: #c7af98">
 
 
 
