--- a/templates/layout.html
+++ b/templates/layout.html
@@ -53,8 +53,6 @@
           <div class="row">
             <div class="col-12">
               <div id="welcome-explanation"> Learn the basics of brewing coffee, tea, and other beverages </div>
-
-
             </div>
 
           </div>
@@ -73,8 +71,17 @@
             <a href="/view/3">
               <img src="https://media.istockphoto.com/photos/homemade-warm-hot-chocolate-picture-id1320380734?s=612x612" alt="hot chocolate" id="menu-other" height="150" length="150">
            </a>
+         </div>
         </div>
+        <div class="row">
+          <div class="col-4"></div>
+          <div class="col-4">
+            <a href="/view/1">
+              <button id="btn_coffee">Start with coffee</button>
+            </a>
           </div>
+          <div class="col-4"></div>
+        </div>
         {% endblock %}
     </div>
   </body>
