--- a/static/main.css
+++ b/static/main.css
@@ -41,10 +41,15 @@
     font-weight:730;
 
 }
-  
+
 .ingredient_label {
     display: inline-block;
 }
+.unacceptable{
+  border: 2px solid red;
+  border-radius: 4px;
+}
+
 
 .cup {
     height: 200px;
@@ -53,7 +58,7 @@
     border-radius: 0px 0px 25px 25px;
     overflow: hidden;
 }
-  
+
 .drink-outline {
     display: flex;
     flex-direction: column-reverse;
@@ -65,7 +70,7 @@
     outline: 0;
     overflow: hidden;
 }
-  
+
 .cup-ingredient {
     position: relative;
     display: block;
@@ -78,7 +83,7 @@
     -o-transition:      background 1.5s;
     transition:         background 1.5s;
 }
-  
+
 .cup-ingredient::after {
     content: "";
     background: var(--background-cup);
@@ -89,7 +94,7 @@
     left: -50%;
     animation: spin 2s ease-in-out forwards;
 }
-  
+
 @keyframes spin {
     0% {
       transform: translateY(0);
@@ -107,4 +112,3 @@
     border-radius: 15%;
     margin-top: 20px;
 }
-  
