--- a/static/main.css
+++ b/static/main.css
@@ -1,31 +1,69 @@
+/*color scheme*/
+/*
+main color - #e3cbb4
+accent color - rgb(149, 189, 149)
+dark gray - 
+light gray -
+*/
+
 /*layout.html css*/
 
 #welcome{
     margin: 50px;
     font-size: 45px;
-    text-align: center
+    text-align: center;
+    font-weight: bold;
+    color: black;
 }
 
 #welcome-explanation{
-    font-size: 25px;
-    text-align: center
+    margin-top: -25px;
+    margin-bottom: 35px;
+    font-size: 21px;
+    text-align: center;
+    color: rgb(87, 87, 87);
 }
 
 #menu-coffee{
     margin-top: 50px;
-    margin-left: 50px;
 }
 
 #menu-tea{
     margin-top: 50px;
-    margin-left: 50px;
 }
 
 #menu-other{
     margin-top: 50px;
-    margin-left: 50px;
+}
+
+.view1{
+    text-align: right;
+}
+
+.view2{
+    text-align: center;
+}
+
+.view3{
+    text-align: left;
+}
+
+.start_button{
+    text-align: center;
+    margin-top: 140px;
+}
+
+#btn_coffee{
+    width: 200px;
+    background-color: rgb(149, 189, 149);
+    border: none;
+    height: 55px;
+    border-radius: 12px;
+    color: rgb(87, 87, 87);
+    cursor: pointer;
 }
 /*end layout.html css*/
+
 
 :root {
     --background-cup: rgb(0, 0, 0);
