updated layout UI

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -21,7 +21,7 @@
 
     <title>Baby Barista</title>
   </head>
-  <body style="background-color: #c7af98">
+  <body style="background-color: #e3cbb4">
 
 
 
@@ -57,30 +57,28 @@
 
           </div>
           <div class="row">
-            <div class="col-4">
+            <div class="col-4 view1">
               <a href="/view/1">
                 <img src="https://media.istockphoto.com/photos/cappuccino-picture-id173245886?s=612x612" alt="cappuccino" id="menu-coffee" height="150" length="150">
               </a>
             </div>
-            <div class="col-4">
+            <div class="col-4 view2">
               <a href="/view/2">
                 <img src="https://media.istockphoto.com/photos/matcha-latte-green-milk-foam-cup-on-wood-table-at-cafe-trendy-powered-picture-id1325991061?s=612x612" alt="matcha latte" id="menu-tea" height="150" length="150">
              </a>
           </div>
-          <div class="col-4">
+          <div class="col-4 view3">
             <a href="/view/3">
               <img src="https://media.istockphoto.com/photos/homemade-warm-hot-chocolate-picture-id1320380734?s=612x612" alt="hot chocolate" id="menu-other" height="150" length="150">
            </a>
          </div>
         </div>
         <div class="row">
-          <div class="col-4"></div>
-          <div class="col-4">
+          <div class="col-12 start_button">
             <a href="/view/1">
               <button id="btn_coffee">Start with coffee</button>
             </a>
           </div>
-          <div class="col-4"></div>
         </div>
         {% endblock %}
     </div>
