finished UI mostly

--- a/templates/view.html
+++ b/templates/view.html
@@ -13,13 +13,14 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-4 image-for-recipe">
+        <div class="col-3 image-for-recipe">
             <div id="drink_current"> {{drink_info.name}}</div>
             <img src="{{drink_info.image}}" alt="{{drink_info.name}}" width="250" height="175">
         </div>
         <div class="col-3">
-            <div id="update1"></div>
+            <div id="drink_taste"> {{drink_info.taste}}</div>
         </div>
+        <div class="col-1"></div>
         <div class="col-3">
             <div id="update2"></div>
         </div>
