--- a/templates/layout.html
+++ b/templates/layout.html
@@ -17,7 +17,10 @@
 
   <link rel="stylesheet" href="{{url_for('static', filename='main.css')}}">
 
-
+  <!-- Font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com"> 
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif&family=Mulish&display=swap" rel="stylesheet">
 
     <title>Baby Barista</title>
   </head>
@@ -27,7 +30,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
-    <a class="navbar-brand" href="/">Baby Barista</a>
+    <a class="navbar-brand" id="branding" href="/">Baby Barista</a>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <form id="target_coffee" action="/view/1">
@@ -84,4 +87,5 @@
     </div>
   </body>
 </html>
+
 
