--- a/templates/front.html
+++ b/templates/front.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <script type="text/javascript" src="{{ url_for('static', filename = 'front.js') }}"></script>
-    
+
     <script>
         let drink_info = {{drink_info|tojson}}
         let ingredient_tool_data = {{ingredient_tool_data|tojson}}
@@ -31,10 +31,8 @@
         <div class="col-6 righty">
             <img src="{{drink_info.image}}" alt="{{drink_info.name}}" width="250" height="175">
             <br><br>
-            <input type="button" class="make" value="Click to begin!"></input>
+            <input type="button" class="make buttoncolors" value="Click to begin!"></input>
         </div>
     </div>
 
 {% endblock %}
-
-
