--- a/templates/layout.html
+++ b/templates/layout.html
@@ -21,7 +21,7 @@
 
     <title>Baby Barista</title>
   </head>
-  <body style="background-color: #e3cbb4">
+  <body class="naturaltanbackgroundcolor">
 
 
 
@@ -76,7 +76,7 @@
         <div class="row">
           <div class="col-12 start_button">
             <a href="/view/1">
-              <button id="btn_coffee">Start with coffee</button>
+              <button id="btn_coffee" class="buttoncolors" >Start with coffee</button>
             </a>
           </div>
         </div>
@@ -84,4 +84,3 @@
     </div>
   </body>
 </html>
-
