Added in the old hex values as a comment

--- a/static/main.css
+++ b/static/main.css
@@ -26,6 +26,8 @@ body {
 .populartanbackgroundcolor{
   background-color: #ffeeae;
 }
+/*old colors hex values: e3cbb4, 95bd95 */
+
 #welcome{
     margin: 50px;
     font-size: 45px;
