fixed conceptual groups

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -59,6 +59,7 @@
             </div>
 
           </div>
+          <div id="click_more">Click to explore:</div>
           <div class="row">
             <div class="col-4 view1">
               <a href="/view/1">
@@ -76,6 +77,7 @@
            </a>
          </div>
         </div>
+        <div id="click_decider">Need help?</div>
         <div class="row">
           <div class="col-12 start_button">
             <a href="/view/1">
@@ -87,3 +89,4 @@
     </div>
   </body>
 </html>
+
